CSS fix: when the annotation list overflows vertically, it no longer gets a horizontal scrollbar

--- a/src/apps/annotation-image/ImageAnnotationDesktop.css
+++ b/src/apps/annotation-image/ImageAnnotationDesktop.css
@@ -26,8 +26,12 @@
 .ia-drawer {
   height: 100%;
   overflow-y: auto;
-  pointer-events: auto;
   padding: 5px 0;
   position: absolute;
   z-index: 1;
+}
+
+
+.ia-drawer .annotation-list {
+  padding-right: 10px;
 }
