--- a/src/apps/annotation-text/RightDrawer/RightDrawer.css
+++ b/src/apps/annotation-text/RightDrawer/RightDrawer.css
@@ -15,7 +15,7 @@
 
 .ta-right-drawer aside {
   position: absolute;
-  top: 0;
+  top: 5px;
   left: 0;
-  width: 360px;
+  width: 345px;
 }
