--- a/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
+++ b/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
@@ -1,6 +1,6 @@
 .anno-drawer-panel.annotation-list {
   box-sizing: border-box;
-  padding: 0 10px 40px 10px;
+  padding: 0 5px 40px 15px;
 }
 
 .anno-drawer-panel.annotation-list > ul {
